[tool.poetry]
name = "Wild"
version = "1.9.1"
description = "A Turn baced game with mithical creatures"
authors = ["GigabiteStudios <contact@gigabitestudios.tk>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
keyboard = "^0.13.5"
getkey = "^0.6.5"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"